--- a/module/Pessoa/view/pessoa/pessoa/index.phtml
+++ b/module/Pessoa/view/pessoa/pessoa/index.phtml
@@ -9,7 +9,7 @@
         <th>Sobrenome</th>
         <th>Email</th>
         <th>Sistuação</th>
-        <th>Ação</th>
+        <th>ação</th>
     </tr>
 <?php foreach($pessoas as $pes){  ?>
     <tr>
